add simple auth; drop unused classes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+# security
+spring.security.user.name=jopa
+spring.security.user.password=jopa
+
 # connected to JDBC (postgres)
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
